fix:fix some canvas related issues

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <body>
     <div id="root">
         <div id="top">
-            <div id="topLeft" class="lightbghover"><button id="topLeftBtn" class="material-symbols-outlined lightbghover">menu</button></div>
+
+            <div id="topLeft" class="lightbghover">
+                <button id="topLeftBtn" class="material-symbols-outlined lightbghover">menu</button>
+            </div>
             <div id="topCenter">
-                <div class="option"><button id="lock" class=" material-symbols-outlined" >lock</button></div>
+                <div>
+                    <button id="lock" class=" material-symbols-outlined option" >lock</button>
+                </div>
                 <div id="Topverticle"></div>
+                <input type="color" id="colorPicker" class="option">
                 <div><button class="material-symbols-outlined option" id="hand">back_hand</button></div>
-                <div><button class="material-symbols-outlined option" id="arrow">web_traffic</button> <sub>1</sub></div>
+                <div><button class="material-symbols-outlined option" id="arrow">web_traffic</button><sub>1</sub></div>
                 <div><button class="material-symbols-outlined option" id="rectangle">rectangle</button> <sub>2</sub></div>
                 <div><button class="material-symbols-outlined option" id="diamond">stat_0</button> <sub>3</sub></div>
                 <div><button class="material-symbols-outlined option" id="circle">circle</button> <sub>4</sub></div>
@@ -24,7 +30,6 @@
                 <div><button class="material-symbols-outlined option" id="line">horizontal_rule</button> <sub>6</sub></div>
                 <div><button class="material-symbols-outlined option" id="text">text_format</button> <sub>7</sub></div>
                 <div><button class="material-symbols-outlined option" id="pencil">edit</button> <sub>8</sub></div>
-                <input type="color" id="colorPicker" class="option">
                 <div><button class="material-symbols-outlined option" id="image">image</button> <sub>9</sub></div>
                 <div><button class="material-symbols-outlined option" id="eraser">ink_eraser</button> <sub>0</sub></div>
                 <div id="Topverticle"> </div>
@@ -34,7 +39,7 @@
             </div>
             <div id="topRight">
                 <button  id="share" class="option">Share</button>
-                <button id="library" class="option"> <span class=" material-symbols-outlined">import_contacts</span> <span>Library</span></button>
+                <button id="library" class="option"> <span class="material-symbols-outlined">import_contacts</span> <span>Library</span></button>
             </div>
         </div>
         <canvas id="canvas"></canvas>
@@ -58,7 +63,7 @@
         </div>
     </div>
     <script src="./freehand.js"></script>
-    <script src="./tooltip.js"></script>
+    <script src="./tooltip.js" ></script>
     <script src="./index.js"></script>
     
 </body>
